--- a/inventory.ini
+++ b/inventory.ini
@@ -1,8 +1,6 @@
 [workstation]
-# This will be replaced with the actual IP of the EC2 instance
-workstation ansible_host=WORKSTATION_IP
+localhost
 
 [all:vars]
-ansible_ssh_user=ec2-user
-ansible_ssh_private_key_file=~/.ssh/your-key.pem  # Update with your key
+ansible_connection=local
 ansible_python_interpreter=/usr/bin/python3
