--- a/roles/k8s_deployment/tasks/main.yml
+++ b/roles/k8s_deployment/tasks/main.yml
@@ -1,68 +1,86 @@
 ---
+# Updated tasks for the k8s_deployment role
+
 - name: Get AWS account ID
-  shell: aws sts get-caller-identity --query Account --output text
-  register: aws_account_id
-  changed_when: false
+  shell: aws sts get-caller-identity --query 'Account' --output text
+  register: aws_account_id_output
+
+- name: Set AWS account ID fact
+  set_fact:
+    aws_account_id: "{{ aws_account_id_output.stdout }}"
 
 - name: Create backend Kubernetes deployment file
   template:
     src: cloudmart-backend.yaml.j2
-    dest: "{{ app_backend_dir }}/cloudmart-backend.yaml"
-    mode: '0644'
+    dest: "{{ backend_dir }}/cloudmart-backend.yaml"
   vars:
-    aws_account_id: "{{ aws_account_id.stdout }}"
+    aws_region: "{{ lookup('env', 'AWS_REGION') | default('us-east-1', true) }}"
 
 - name: Apply backend Kubernetes deployment
-  shell: kubectl apply -f {{ app_backend_dir }}/cloudmart-backend.yaml
-  register: backend_deploy_result
+  shell: |
+    kubectl apply -f {{ backend_dir }}/cloudmart-backend.yaml
+  register: backend_deployment_result
 
-- name: Verify backend pods are running
-  shell: kubectl get pods -l app=cloudmart-backend-app
-  register: backend_pods
-  until: "'Running' in backend_pods.stdout"
-  retries: 30
-  delay: 10
+- name: Display backend deployment result
+  debug:
+    var: backend_deployment_result.stdout_lines
+  when: backend_deployment_result is succeeded
 
-- name: Get backend service LoadBalancer endpoint
-  shell: kubectl get svc cloudmart-backend-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'
-  register: backend_lb
-  until: backend_lb.stdout != ""
-  retries: 30
+- name: Wait for backend deployment to be available
+  shell: |
+    kubectl rollout status deployment/cloudmart-backend-app --timeout=120s
+  register: backend_status
+  retries: 3
   delay: 10
+  until: backend_status.rc == 0
+  ignore_errors: yes
+
+- name: Wait for backend service to get external IP
+  shell: |
+    kubectl get svc cloudmart-backend-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'
+  register: backend_url
+  until: backend_url.stdout != ""
+  retries: 15
+  delay: 20
+  ignore_errors: yes
+
+- name: Get backend service URL
+  shell: |
+    kubectl get svc cloudmart-backend-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'
+  register: backend_url_final
+  when: backend_url is succeeded
+  ignore_errors: yes
+
+- name: Set default backend URL if load balancer not ready
+  set_fact:
+    backend_endpoint: "http://cloudmart-backend-app-service"
+  when: backend_url_final is failed or backend_url_final.stdout == ""
+
+- name: Set actual backend URL if load balancer ready
+  set_fact:
+    backend_endpoint: "http://{{ backend_url_final.stdout }}"
+  when: backend_url_final is succeeded and backend_url_final.stdout != ""
+
+- name: Create frontend .env file with backend endpoint
+  template:
+    src: frontend-env.j2
+    dest: "{{ frontend_dir }}/.env"
+  vars:
+    backend_url: "{{ backend_endpoint }}"
 
 - name: Create frontend Kubernetes deployment file
   template:
     src: cloudmart-frontend.yaml.j2
-    dest: "{{ app_frontend_dir }}/cloudmart-frontend.yaml"
-    mode: '0644'
+    dest: "{{ frontend_dir }}/cloudmart-frontend.yaml"
   vars:
-    aws_account_id: "{{ aws_account_id.stdout }}"
-    backend_endpoint: "{{ backend_lb.stdout }}"
+    aws_region: "{{ lookup('env', 'AWS_REGION') | default('us-east-1', true) }}"
 
 - name: Apply frontend Kubernetes deployment
-  shell: kubectl apply -f {{ app_frontend_dir }}/cloudmart-frontend.yaml
-  register: frontend_deploy_result
+  shell: |
+    kubectl apply -f {{ frontend_dir }}/cloudmart-frontend.yaml
+  register: frontend_deployment_result
 
-- name: Verify frontend pods are running
-  shell: kubectl get pods -l app=cloudmart-frontend-app
-  register: frontend_pods
-  until: "'Running' in frontend_pods.stdout"
-  retries: 30
-  delay: 10
-
-- name: Get frontend service LoadBalancer endpoint
-  shell: kubectl get svc cloudmart-frontend-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'
-  register: frontend_lb
-  until: frontend_lb.stdout != ""
-  retries: 30
-  delay: 10
-
-- name: Kubernetes deployment summary
+- name: Display frontend deployment result
   debug:
-    msg: 
-      - "Kubernetes deployment completed successfully"
-      - "Backend service: http://{{ backend_lb.stdout }}:5000"
-      - "Frontend service: http://{{ frontend_lb.stdout }}:5001"
-      - "Check deployments with: kubectl get deployments"
-      - "Check services with: kubectl get services"
-      - "Check pods with: kubectl get pods"
+    var: frontend_deployment_result.stdout_lines
+  when: frontend_deployment_result is succeeded
