--- a/roles/k8s_deployment/tasks/main.yml
+++ b/roles/k8s_deployment/tasks/main.yml
@@ -51,11 +51,10 @@
   when: backend_url is succeeded
   ignore_errors: yes
 
-- name: Set default backend URL if load balancer not ready
-  set_fact:
-    backend_endpoint: "http://cloudmart-backend-app-service"
-  when: backend_url_final is failed or backend_url_final.stdout == ""
-
+- name: Get backend service URL
+  command: kubectl get svc cloudmart-backend-app-service -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'
+  register: backend_service_result
+  
 - name: Set actual backend URL if load balancer ready
   set_fact:
     backend_url: "http://{{ backend_service_result.stdout }}"
