--- a/roles/k8s_deployment/tasks/main.yml
+++ b/roles/k8s_deployment/tasks/main.yml
@@ -75,7 +75,8 @@
     backend_service_name: "cloudmart-backend-app-service"
     backend_service_port: "5000"
     frontend_service_type: "LoadBalancer"
-    frontend_image: "{{ aws_account_id }}.dkr.ecr.{{ aws_region }}.amazonaws.com/cloudmart-frontend"
+    frontend_image: "{{ aws_account_id }}.dkr.ecr.{{ aws_region | default('us-east-1') }}.amazonaws.com/cloudmart-frontend"
+    k8s_namespace: "default"  # Explicit namespace to avoid the conflict
 
 - name: Apply frontend Kubernetes deployment
   shell: |
