--- a/roles/k8s_deployment/tasks/main.yml
+++ b/roles/k8s_deployment/tasks/main.yml
@@ -1,5 +1,14 @@
 ---
 # Updated tasks for the k8s_deployment role
+- name: Install required Python modules for Kubernetes tasks
+  pip:
+    name:
+      - openshift
+      - kubernetes
+      - "urllib3==1.26.16"
+    state: present
+  become: yes
+  delegate_to: localhost
 
 - name: Get AWS account ID
   shell: aws sts get-caller-identity --query 'Account' --output text
