--- a/roles/k8s_deployment/tasks/main.yml
+++ b/roles/k8s_deployment/tasks/main.yml
@@ -66,7 +66,7 @@
 - name: Create frontend .env file with backend endpoint
   template:
     src: frontend-env.j2
-    dest: "{{ frontend_env_file_path }}"
+    dest: "/tmp/frontend.env"
   vars:
     backend_url: "http://{{ backend_service_url }}:5000/api"
 
