quase ok, piscando branco no browser

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,15 @@
 [defaults]
 inventory = inventory.ini
 host_key_checking = False
-remote_user = ec2-user
-roles_path = ./roles
+deprecation_warnings = False
 retry_files_enabled = False
 stdout_callback = yaml
+bin_ansible_callbacks = True
+remote_user = ec2-user
+roles_path = ./roles
+
+[inventory]
+enable_plugins = host_list, script, auto, yaml, ini, toml
+
+[ssh_connection]
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s
