--- a/inventory.ini
+++ b/inventory.ini
@@ -4,3 +4,9 @@ localhost
 [all:vars]
 ansible_connection=local
 ansible_python_interpreter=/usr/bin/python3
+
+[local]
+localhost ansible_connection=local ansible_python_interpreter=/usr/bin/python3
+
+[local:vars]
+ansible_host=127.0.0.1
